--- a/publications/2017 JORMiCS/doc.bib
+++ b/publications/2017 JORMiCS/doc.bib
@@ -1,4 +1,89 @@
- @inbook{Hordijk2010,
+@article{Joosten-AFP17,
+  author =   {Stef Joosten},
+  title =    {Preserving Invariance of Rules in Relation Algebra},
+  journal =  {Archive of Formal Proofs},
+  month =    Jun,
+  year =     2017,
+  note =     {\url{http://isa-afp.org/entries/DiskPaxos.shtml}, Formal proof development},
+  ISSN =     {2150-914x}
+}
+
+@inproceedings{Joosten2017,
+author="Joosten, Stef",
+editor="H{\"o}fner, Peter and Pous, Damien and Struth, Georg",
+title="Software Development in Relation Algebra with Ampersand",
+bookTitle="Relational and Algebraic Methods in Computer Science: 16th International Conference, RAMiCS 2017, Lyon, France, May 15-18, 2017, Proceedings",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="177--192",
+isbn="978-3-319-57418-9"
+}
+
+@inproceedings{Dijkstra2016,
+author="Dijkstra, Marloes and Joosten, Stef and Stamhuis, Evert and Visser, Mark",
+title="Beginselen Digitaal: Digitalisering en de beginselen van de strafrechtspleging",
+subtitle="Rapport van een verkennend onderzoek in opdracht van het WODC",
+year="2016",
+month="6",
+publisher="Open Universiteit",
+note="Kamerstukken II 2017/06, 29 279, nr. 388"
+}
+
+@phdthesis{Michels2015,
+	Author = {Gerard Michels},
+	School = {Open University of the Netherlands},
+	Title = {Development Environment for Rule-based Prototyping},
+	Month = {June},
+	Year = {2015}}
+
+@book{davey1990,
+  address = {Cambridge},
+  author = {Davey, Brian A. and Priestley, Hilary A.},
+  isbn = {0521365848 9780521365840 0521367662 9780521367660},
+  publisher = {Cambridge University Press},
+  title = {Introduction to lattices and order},
+  year = 1990
+}
+
+@article{Floyd1967,
+  added-at = {2009-01-27T21:07:57.000+0100},
+  author = {Floyd, Robert W.},
+  biburl = {https://www.bibsonomy.org/bibtex/22fa3c50b3386ec2f640eb8bfaedaa7db/tmcphillips},
+  description = {A formal grammar for flowcharts.},
+  interhash = {bd9dee412b9a403b9fa1f1b2f0032f36},
+  intrahash = {2fa3c50b3386ec2f640eb8bfaedaa7db},
+  journal = {Proceedings of Symposium on Applied Mathematics},
+  keywords = {FormalLanguages},
+  pages = {19-32},
+  timestamp = {2009-01-27T22:39:35.000+0100},
+  title = {Assigning Meanings to Programs},
+  url = {http://laser.cs.umass.edu/courses/cs521-621.Spr06/papers/Floyd.pdf},
+  volume = 19,
+  year = 1967
+}
+
+@article{Hoare1969,
+ author = {Hoare, C. A. R.},
+ title = {An Axiomatic Basis for Computer Programming},
+ journal = {Commun. ACM},
+ issue_date = {Oct. 1969},
+ volume = {12},
+ number = {10},
+ month = oct,
+ year = {1969},
+ issn = {0001-0782},
+ pages = {576--580},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/363235.363259},
+ doi = {10.1145/363235.363259},
+ acmid = {363259},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {axiomatic method, formal language definition, machine-independent programming, program documentation, programming language design, theory of programming' proofs of programs},
+} 
+
+@inbook{Hordijk2010,
 author={Hordijk,Wiebe and Wieringa,Roel},
 year={2010},
 title={Rationality of Cross-System Data Duplication: A Case Study},
@@ -497,12 +582,6 @@ url="http://dx.doi.org/10.1007/s10503-005-4418-7"
  keywords = {heterogeneous relation algebra, type inference system, typing discipline},
 }
 
-@phdthesis{Michels2015,
-	Author = {Gerard Michels},
-	School = {Open University of the Netherlands},
-	Title = {Development Environment for Rule-based Prototyping},
-	Year = {2015}}
-
 @inproceedings{Michels2011,
  author = {Gerard Michels and Sebastiaan Joosten and Jaap van der Woude and Stef Joosten},
  title = {Ampersand: Applying Relation Algebra in Practice},
@@ -542,7 +621,14 @@ pages="under submission",
 year="2017"
 }
 
-
+@book{Nipkow2002,
+ author = {Nipkow, Tobias and Wenzel, Markus and Paulson, Lawrence C.},
+ title = {Isabelle/HOL: A Proof Assistant for Higher-order Logic},
+ year = {2002},
+ isbn = {3-540-43376-7},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+}
 
 @inproceedings{vdWoude2011,
 AUTHOR = "Woude, Jaap van der and Joosten, Stef",
